[gd_scene load_steps=29 format=2]

[ext_resource path="res://Resources/MainMenu/Frame 4.png" type="Texture" id=1]
[ext_resource path="res://Help2.gd" type="Script" id=2]
[ext_resource path="res://Resources/help/Keyboard-and-Mouse.png" type="Texture" id=3]
[ext_resource path="res://Resources/sprites/Pies/MincePieIdle0.png" type="Texture" id=4]
[ext_resource path="res://Resources/sprites/Pies/MincePieIdle1.png" type="Texture" id=5]
[ext_resource path="res://Resources/sprites/Pies/MincePieIdle2.png" type="Texture" id=6]
[ext_resource path="res://Resources/sprites/Pies/SteacknCheeseIdle3.png" type="Texture" id=7]
[ext_resource path="res://Resources/sprites/Pies/SteacknCheeseIdle2.png" type="Texture" id=8]
[ext_resource path="res://Resources/sprites/Pies/ButterChickenIdle0.png" type="Texture" id=9]
[ext_resource path="res://Resources/sprites/Pies/ButterChickenIdle1.png" type="Texture" id=10]
[ext_resource path="res://Resources/sprites/Pies/SteacknCheeseIdle1.png" type="Texture" id=11]
[ext_resource path="res://Resources/sprites/Pies/ButterChickenIdle3.png" type="Texture" id=12]
[ext_resource path="res://Resources/sprites/Pies/MincePieIdle3.png" type="Texture" id=13]
[ext_resource path="res://Resources/sprites/Pies/ButterChickenIdle2.png" type="Texture" id=14]
[ext_resource path="res://Resources/sprites/Pies/SteacknCheeseIdle0.png" type="Texture" id=15]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 70
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 142, 288, 48, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 142, 304, 48, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "A",
"speed": 1.5
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "D",
"speed": 1.5
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Space",
"speed": 1.5
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "pies",
"speed": 2.0
} ]

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Resources/Fonts/JuliusSansOne-Regular.ttf"

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = SubResource( 12 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Frame4" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="."]
margin_left = 192.0
margin_top = 32.0
margin_right = 832.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "help"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 288.0
margin_top = 128.0
margin_right = 736.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "collect all hidden pies to open the door to the next level"
align = 1
autowrap = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -12.0269, 92.4 )
scale = Vector2( 1.02349, 0.1 )
points = PoolVector2Array( 224, 96, 800, 96, 512, 96 )
default_color = Color( 0, 0, 0, 1 )

[node name="D3" type="AnimatedSprite" parent="."]
position = Vector2( 512, 368 )
scale = Vector2( 1.91667, 2 )
frames = SubResource( 11 )
animation = "pies"
frame = 10
playing = true

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 512.0
margin_right = 240.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 13 )
text = "Prev Page"
flat = true

[node name="Line2d2" type="Line2D" parent="Button"]
visible = false
position = Vector2( 2.17736, 56 )
scale = Vector2( 1.72335, 0.1 )
points = PoolVector2Array( 0, 64, 77.5897, 64, 128, 64 )
default_color = Color( 1, 1, 1, 1 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
